--- a/content/About.html
+++ b/content/About.html
@@ -145,6 +145,7 @@ img.add_border {
 <p>課程倉儲: <a href="https://github.com/mdecourse/cd2022">https://github.com/mdecourse/cd2022</a></p>
 <p>課程規劃與作業: <a href="https://github.com/mdecourse/cd2022/discussions">https://github.com/mdecourse/cd2022/discussions</a></p>
 <p>課程討論區: <a href="https://gitter.im/mdecourse/cd2022">https://gitter.im/mdecourse/cd2022</a></p>
+<p>課程導引: <a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
 <p><a href="http://[2001:288:6004:17:10ff::10]:88">教學影片</a> (for local area network only)</p>
 <hr/>
 <h4>課程簡介:</h4>
