update website content

--- a/content/Brython.html
+++ b/content/Brython.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='Realizable.html'>Realizable</a><li><a href='Website.html'>Website</a><li><a href='Brython.html'>Brython</a><li><a href='Rust.html'>Rust</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Automation.html'>Automation</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='MBSE.html'>MBSE</a><ul class='dropdown'><li><a href='Project1.html'>Project1</a><li><a href='Arduino.html'>Arduino</a></li></ul><li><a href='Programming.html'>Programming</a><li><a href='Downloads.html'>Downloads</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='Realizable.html'>Realizable</a><li><a href='Website.html'>Website</a><li><a href='Brython.html'>Brython</a></li></ul><li><a href='NX1980.html'>NX1980</a><li><a href='Onshape.html'>Onshape</a><li><a href='Programming.html'>Programming</a><li><a href='Downloads.html'>Downloads</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Website << <a href='Website.html'>Previous</a> <a href='Rust.html'>Next</a> >> Rust<br /><h1>Brython</h1>
+    <div id="tipue_search_content">Website << <a href='Website.html'>Previous</a> <a href='NX1980.html'>Next</a> >> NX1980<br /><h1>Brython</h1>
 <p><a href="https://github.com/orgs/siemens/repositories?q=&amp;type=all&amp;language=python">Siemens and Python related repositories</a></p>
 <p>
 <script src="./../cmsimde/static/brython.js">
@@ -575,7 +575,10 @@ tetris = button2(tetris_url)
 doc["tetris"].bind("click", tetris.do)
 ################################## tetris end
 </script>
-</p><br />Website << <a href='Website.html'>Previous</a> <a href='Rust.html'>Next</a> >> Rust</div>
+</p>
+<p></p>
+<p></p>
+<br />Website << <a href='Website.html'>Previous</a> <a href='NX1980.html'>Next</a> >> NX1980</div>
         
     <!-- footer -->
       <div class="container">
