--- a/content/Realizable.html
+++ b/content/Realizable.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='Realizable.html'>Realizable</a><li><a href='Website.html'>Website</a><li><a href='Brython.html'>Brython</a><li><a href='Rust.html'>Rust</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Automation.html'>Automation</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='MBSE.html'>MBSE</a><ul class='dropdown'><li><a href='Project1.html'>Project1</a><li><a href='Arduino.html'>Arduino</a></li></ul><li><a href='Programming.html'>Programming</a><li><a href='Downloads.html'>Downloads</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='Realizable.html'>Realizable</a><li><a href='Website.html'>Website</a><li><a href='Brython.html'>Brython</a></li></ul><li><a href='NX1980.html'>NX1980</a><li><a href='Onshape.html'>Onshape</a><li><a href='Programming.html'>Programming</a><li><a href='Downloads.html'>Downloads</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,10 +141,6 @@ img.add_border {
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Website.html'>Next</a> >> Website<br /><h1>Realizable</h1>
 <p>本課程以 4 人一小組, 兩小組成一大組的方式, 透過計算機程式方法 (執行運算及操控) 與電腦輔助設計的建模流程, 完成可實現之機電整合系統設計 (Realizable Mechatronic System Design).</p>
-<p><a href="./../downloads/design_of_mechatronic_system.pdf">Design of Mechatronic System.pdf</a></p>
-<p><a href="https://github.com/mdecourse/ackermann-line-follower-robot">https://github.com/mdecourse/ackermann-line-follower-robot</a></p>
-<p><a href="https://github.com/mdecourse/CoppeliaSim-Remote-API">https://github.com/mdecourse/CoppeliaSim-Remote-API</a></p>
-<p><a href="https://sstepput.medium.com/teach-your-robot-new-tricks-with-nlp-and-deep-learning-301c9a1f1c0c">https://sstepput.medium.com/teach-your-robot-new-tricks-with-nlp-and-deep-learning-301c9a1f1c0c</a></p>
 <p>機械元件建模工具:</p>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">Solvespace</a> (開源)、<a href="https://mde.tw/cad2021_hw/content/NX1980.html">NX1980</a> (高端)、<a href="https://www.onshape.com/en/">Onshape</a> (全雲端)</p>
 <p>電子電機控制與感測模擬工具:</p>
@@ -158,7 +154,6 @@ img.add_border {
 <p style="padding-left: 30px;"><a href="https://lcgamboa.github.io/">PICSimLab</a> (開源)</p>
 <p>3D 列印與模擬工具:</p>
 <p style="padding-left: 30px;">3D printers:</p>
-<p style="padding-left: 60px;"><a href="./../downloads/Recent Developments and Challenges of 3D-Printed Construction- A Review of Research Fronts.pdf">Recent Developments and Challenges of 3D-Printed Construction: A Review of Research Fronts.pdf</a></p>
 <p style="padding-left: 60px;"><a href="https://github.com/mdecourse/kll3pp">https://github.com/mdecourse/kll3pp</a> (<a href="./../downloads/kll3pp_printer.ttt">kll3pp_printer.ttt</a>, <a href="https://www.youtube.com/watch?v=R26R_07rkIc">Delta printer</a>)</p>
 <p style="padding-left: 30px;">G-code based 列印模擬:</p>
 <p style="padding-left: 60px;"><a href="https://github.com/sudipchakraborty/A-simulated-3D-Printer-In-CoppeliaSim">https://github.com/sudipchakraborty/A-simulated-3D-Printer-In-CoppeliaSim</a> (<a href="https://zenodo.org/record/5897079">Paper</a>)</p>
@@ -168,9 +163,9 @@ img.add_border {
 <p style="padding-left: 90px;"><a href="https://github.com/mdecourse/gcode_machine">https://github.com/mdecourse/gcode_machine</a></p>
 <p style="padding-left: 30px;">3D Printer based 列印模擬:</p>
 <p style="padding-left: 60px;"><a href="https://all3dp.com/2/gcode-viewer-3d-printer-simulator-best-tools/">https://all3dp.com/2/gcode-viewer-3d-printer-simulator-best-tools/</a></p>
-<p style="padding-left: 30px;"><a href="https://www.hubs.com/knowledge-base/simulations-3d-printing/">進階商用 3D 列印模擬</a></p>
 <p>雷射切割模擬工具:</p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/papercraft">https://github.com/mdecourse/papercraft</a>  (Unfold STL for laser cutting)</p><br />About << <a href='About.html'>Previous</a> <a href='Website.html'>Next</a> >> Website</div>
+<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/papercraft">https://github.com/mdecourse/papercraft</a>  (Unfold STL for laser cutting)</p>
+<br />About << <a href='About.html'>Previous</a> <a href='Website.html'>Next</a> >> Website</div>
         
     <!-- footer -->
       <div class="container">
