--- a/content/NX1980.html
+++ b/content/NX1980.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='Realizable.html'>Realizable</a><li><a href='Website.html'>Website</a><li><a href='Brython.html'>Brython</a><li><a href='Rust.html'>Rust</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Automation.html'>Automation</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='MBSE.html'>MBSE</a><ul class='dropdown'><li><a href='Project1.html'>Project1</a><li><a href='Arduino.html'>Arduino</a></li></ul><li><a href='Programming.html'>Programming</a><li><a href='Downloads.html'>Downloads</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='Realizable.html'>Realizable</a><li><a href='Website.html'>Website</a><li><a href='Brython.html'>Brython</a></li></ul><li><a href='NX1980.html'>NX1980</a><li><a href='Onshape.html'>Onshape</a><li><a href='Programming.html'>Programming</a><li><a href='Downloads.html'>Downloads</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Rust << <a href='Rust.html'>Previous</a> <a href='Automation.html'>Next</a> >> Automation<br /><h1>NX1980</h1>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape<br /><h1>NX1980</h1>
 <h4>Why NX1980?</h4>
 <p>為什麼採用 NX1980?</p>
 <p>優點:</p>
@@ -154,35 +154,7 @@ img.add_border {
 <li>NX1980 套件模組與功能眾多, 完整的官方參考資料需要在維護合約內才能擷取, 造成初學者學習上的重大瓶頸.</li>
 </ol>
 <p>本課程所使用的 <a href="https://drive.google.com/file/d/17wDJd6AeMhwrOzWGO_o8afCEsFKh3Hy9/view">NX1980 portable</a> (for @gm users only, file size: 3 GB, extracted size: 15.2 GB).</p>
-<p><a href="https://mde.tw/cad2021_hw/content/NX1980.html">https://mde.tw/cad2021_hw/content/NX1980.html</a></p>
-<p><a href="https://docs.sw.siemens.com/zh-TW/release/209349590/NX%201980%20Series">中文 Documentation</a></p>
-<p><a href="https://docs.sw.siemens.com/en-US/release/209349590/NX%201980%20Series">英文 Documentation</a></p>
-<p><a href="https://mde.tw/cad2021_hw/content/CAD2%20%E7%B9%AA%E5%9C%96.html">有關 NX</a></p>
-<p><a href="https://mde.tw/cad2019/downloads/NX-12-for-Engineering-Design.pdf">https://mde.tw/cad2019/downloads/NX-12-for-Engineering-Design.pdf</a></p>
-<p><a href="https://www.youtube.com/watch?v=GUaa97tALxE&amp;list=PLzEsJue49U_EMMv0eBo8MNJjJOq_WHCrl">NX1855-1919 Tutorial</a></p>
-<p><a href="https://www.youtube.com/watch?v=GV7dIG-Xo4I&amp;list=PLWgKU50q-gC3sTbME7-xNFPQQL8o4mdC0&amp;index=1">NX Tutorial</a></p>
-<p><a href="https://www.youtube.com/watch?v=q1_9ZG0ypx4&amp;list=PL0u_ma41CXfSeMZ669ttDWMFLTJ522K4c">NX Tutorial 2</a></p>
-<p><a href="https://web.mst.edu/~mleu/nx_manuals/">NX Tutorial 3</a></p>
-<p>In German:</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/9zjjE6nW0d8" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V5Fi447E9fg" title="YouTube video player" width="560"></iframe></p>
-<p>In English:</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/A-DSNMz6TVk" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/hCvy5i5r6lo" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/TllV3hE7QPw" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fYHl4Fkhx1I" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/tRTS2WkNxmo" title="YouTube video player" width="560"></iframe></p>
-<p>Pattern:</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/JqQLHVfWk_Y" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IBfm8li9f1c" title="YouTube video player" width="560"></iframe></p>
-<p>In Turkish:</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/c2rZPjqnVaU" title="YouTube video player" width="560"></iframe></p>
-<p>適合關掉聲音觀看:</p>
-<p>Modeling:</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/dxV5454sOWw" title="YouTube video player" width="560"></iframe></p>
-<p>Move Face:</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/mgGwNmckfg0" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/zjPQcJF94-E" title="YouTube video player" width="560"></iframe></p><br />Rust << <a href='Rust.html'>Previous</a> <a href='Automation.html'>Next</a> >> Automation</div>
+<br />Brython << <a href='Brython.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape</div>
         
     <!-- footer -->
       <div class="container">
