--- a/content/Onshape.html
+++ b/content/Onshape.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='Realizable.html'>Realizable</a><li><a href='Website.html'>Website</a><li><a href='Brython.html'>Brython</a><li><a href='Rust.html'>Rust</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Automation.html'>Automation</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='MBSE.html'>MBSE</a><ul class='dropdown'><li><a href='Project1.html'>Project1</a><li><a href='Arduino.html'>Arduino</a></li></ul><li><a href='Programming.html'>Programming</a><li><a href='Downloads.html'>Downloads</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='Realizable.html'>Realizable</a><li><a href='Website.html'>Website</a><li><a href='Brython.html'>Brython</a></li></ul><li><a href='NX1980.html'>NX1980</a><li><a href='Onshape.html'>Onshape</a><li><a href='Programming.html'>Programming</a><li><a href='Downloads.html'>Downloads</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Automation << <a href='Automation.html'>Previous</a> <a href='MBSE.html'>Next</a> >> MBSE<br /><h1>Onshape</h1>
+    <div id="tipue_search_content">NX1980 << <a href='NX1980.html'>Previous</a> <a href='Programming.html'>Next</a> >> Programming<br /><h1>Onshape</h1>
 <p>Why Onshape?</p>
 <p>為什麼採用 Onshape?</p>
 <p>優點:</p>
@@ -155,8 +155,7 @@ img.add_border {
 <li>沒有網路就無法進行設計繪圖</li>
 <li>對一般用戶只提供特徵層級的二次開發, 更進階的零組件或延伸開發, 只提供給特定商務用戶.</li>
 </ol>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/kPNlzlkBGMA" title="YouTube video player" width="560"></iframe></p><br />Automation << <a href='Automation.html'>Previous</a> <a href='MBSE.html'>Next</a> >> MBSE</div>
+<br />NX1980 << <a href='NX1980.html'>Previous</a> <a href='Programming.html'>Next</a> >> Programming</div>
         
     <!-- footer -->
       <div class="container">
