--- a/config/content.htm
+++ b/config/content.htm
@@ -1,23 +1,22 @@
 <h1>About</h1>
-<p>機械設計工程系大二協同產品設計實習課程.</p>
-<p>課程網頁: <a href="https://mde.tw/cd2022">https://mde.tw/cd2022</a></p>
-<p>課程倉儲: <a href="https://github.com/mdecycu/cd2022">https://github.com/mdecycu/cd2022</a></p>
-<p>課程討論區: <a href="https://gitter.im/mdecourse/cd2022">https://gitter.im/mdecourse/cd2022</a></p>
-<p>課程導引: <a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
+<p>協同產品設計實習</p>
+<p>網頁: <a href="https://mde.tw/cd2022">https://mde.tw/cd2022</a></p>
+<p>倉儲: <a href="https://github.com/mdecycu/cd2022">https://github.com/mdecycu/cd2022</a></p>
+<p>討論區: <a href="https://gitter.im/mdecourse/cd2022">https://gitter.im/mdecourse/cd2022</a></p>
+<p>導引: <a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
 <hr/>
-<h4>課程簡介:</h4>
-<p style="padding-left: 30px;">協同產品設計實習承接電腦輔助設計實習課程, 著重在探討多人模式下, 如何有效執行與機電系統設計相關的產品開發流程 (人與人協同, 人與機器協同, 機器與機器協同).</p>
-<p style="padding-left: 30px;">電腦輔助設計室 <a href="https://github.com/mdecourse/wcm2022/discussions/2">IPv6 網路設定</a></p>
+<h4>簡介:</h4>
+<p style="padding-left: 30px;">協同產品設計實習承接電腦輔助設計實習, 著重在探討多人模式下, 如何有效執行與機電系統設計相關的產品開發流程 (人與人協同, 人與機器協同, 機器與機器協同).</p>
+<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/wcm2022/discussions/2">IPv6 網路設定</a></p>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cd2021/content/SSH%20%E4%BA%86%E6%B2%92.html">SSH</a>, git submodule add URL dir, git clone recurse-submodules URL, git remote add abbr URL, cms.bat and acp.bat</p>
 <p style="padding-left: 30px;"><a href="https://wcm.cycu.org">https://wcm.cycu.org</a> (BIOS 版本: Acer R01-A4, 2009.03/:10ff::12/pj2022)</p>
-<p style="padding-left: 30px;">本課程以每四人為一小組, 兩小組為一大組執行機電系統模型設置專案, 任務一將使用 <a href="https://www.ufactory.cc/pages/uarm">uarm</a> (<a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshape uArm</a> 與 <a href="https://github.com/AliShug/EvoArm">Evoarm</a>) 完成<a href="https://github.com/mdecourse/cd2022/discussions/1#discussioncomment-1984898">課程主題一</a>.</p>
-<p style="padding-left: 30px;">課程主題二: 分別利用 <a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">Solvespace</a>, <a href="https://mde.tw/cad2021_hw/content/NX1980.html">NX1980</a> 與 <a href="https://www.onshape.com/en/">Onshape</a>, 參考<a href="/downloads/Not_so_new_type_of_walking_machine.pdf">行走機構文獻</a>, 設計一款可配合 uArm Robot 上下載運物件 (loading and unloading) 的行走機構.</p>
-<p style="padding-left: 30px;">課程主題三: 每一大組必須將 Github 上的大組倉儲與網站內容, 設法同步至電腦輔助設計室 <a href="http://project.mde.tw/blog/yen-dian-nao-fu-zhu-she-ji-shi-dian-nao-pei-zhi.html">Skylake MD790</a> 電腦第三磁區中的 <a href="https://fossil-scm.org/home/doc/trunk/www/server/">Fossil SCM server</a>.</p>
-<h4>電腦輔助設計室與協同設計室行事曆</h4>
+<p style="padding-left: 30px;">每四人為一小組, 兩小組為一大組執行機電系統模型設置專案, 任務一將使用 <a href="https://www.ufactory.cc/pages/uarm">uarm</a> (<a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshape uArm</a> 與 <a href="https://github.com/AliShug/EvoArm">Evoarm</a>) 完成<a href="https://github.com/mdecourse/cd2022/discussions/1#discussioncomment-1984898">主題一</a>.</p>
+<p style="padding-left: 30px;">主題二: 分別利用 <a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">Solvespace</a>, <a href="https://mde.tw/cad2021_hw/content/NX1980.html">NX1980</a> 與 <a href="https://www.onshape.com/en/">Onshape</a>, 參考<a href="/downloads/Not_so_new_type_of_walking_machine.pdf">行走機構文獻</a>, 設計一款可配合 uArm Robot 上下載運物件 (loading and unloading) 的行走機構.</p>
+<p style="padding-left: 30px;">主題三: 每一大組必須將 Github 上的大組倉儲與網站內容, 設法同步至電腦輔助設計室 <a href="http://project.mde.tw/blog/yen-dian-nao-fu-zhu-she-ji-shi-dian-nao-pei-zhi.html">Skylake MD790</a> 電腦第三磁區中的 <a href="https://fossil-scm.org/home/doc/trunk/www/server/">Fossil SCM server</a>.</p>
+<h4>行事曆</h4>
 <p><a href="https://calendar.google.com/calendar/embed?src=mde.nfu.edu.tw_3439313938333136353439%40resource.calendar.google.com&amp;ctz=Asia%2FTaipei&amp;mode=week&amp;src=mde.nfu.edu.tw_35303530373431313438%40resource.calendar.google.com&amp;ctz=Asia%2FTaipei&amp;src=yen%40gm.nfu.edu.tw&amp;ctz=Asia%2FTaipei">全頁檢視</a></p>
-<p><iframe height="600" src="https://calendar.google.com/calendar/embed?src=mde.nfu.edu.tw_3439313938333136353439%40resource.calendar.google.com&amp;ctz=Asia%2FTaipei&amp;mode=week&amp;src=mde.nfu.edu.tw_35303530373431313438%40resource.calendar.google.com&amp;ctz=Asia%2FTaipei&amp;src=yen%40gm.nfu.edu.tw&amp;ctz=Asia%2FTaipei" width="800"></iframe></p>
-<h2>Realizable</h2>
-<p>本課程以 4 人一小組, 兩小組成一大組的方式, 透過計算機程式方法 (執行運算及操控) 與電腦輔助設計的建模流程, 完成可實現之機電整合系統設計 (Realizable Mechatronic System Design).</p>
+<p><iframe height="600" src="https://calendar.google.com/calendar/embed?src=mde.nfu.edu.tw_3439313938333136353439%40resource.calendar.google.com&amp;ctz=Asia%2FTaipei&amp;mode=week&amp;src=mde.nfu.edu.tw_35303530373431313438%40resource.calendar.google.com&amp;ctz=Asia%2FTaipei&amp;src=yen%40gm.nfu.edu.tw&amp;ctz=Asia%2FTaipei" width="800"></iframe></p><h2>Realizable</h2>
+<p>以 4 人一小組, 兩小組成一大組的方式, 透過計算機程式方法 (執行運算及操控) 與電腦輔助設計的建模流程, 完成可實現之機電整合系統設計 (Realizable Mechatronic System Design).</p>
 <p>機械元件建模工具:</p>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">Solvespace</a> (開源)、<a href="https://mde.tw/cad2021_hw/content/NX1980.html">NX1980</a> (高端)、<a href="https://www.onshape.com/en/">Onshape</a> (全雲端)</p>
 <p>電子電機控制與感測模擬工具:</p>
@@ -39,8 +38,7 @@
 <p style="padding-left: 30px;">3D Printer based 列印模擬:</p>
 <p style="padding-left: 60px;"><a href="https://all3dp.com/2/gcode-viewer-3d-printer-simulator-best-tools/">https://all3dp.com/2/gcode-viewer-3d-printer-simulator-best-tools/</a></p>
 <p>雷射切割模擬工具:</p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/papercraft">https://github.com/mdecourse/papercraft</a>  (Unfold STL for laser cutting)</p>
-<h2>Website</h2>
+<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/papercraft">https://github.com/mdecourse/papercraft</a>  (Unfold STL for laser cutting)</p><h2>Website</h2>
 <p>倉儲 (Repository) and 網站 (Website)</p>
 <p>使用分散式版次管理系統中的倉儲建立協同設計網站的特性:</p>
 <ol>
