--- a/content/Realizable.html
+++ b/content/Realizable.html
@@ -140,7 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Website.html'>Next</a> >> Website<br /><h1>Realizable</h1>
-<p>本課程以 4 人一小組, 兩小組成一大組的方式, 透過計算機程式方法 (執行運算及操控) 與電腦輔助設計的建模流程, 完成可實現之機電整合系統設計 (Realizable Mechatronic System Design).</p>
+<p>以 4 人一小組, 兩小組成一大組的方式, 透過計算機程式方法 (執行運算及操控) 與電腦輔助設計的建模流程, 完成可實現之機電整合系統設計 (Realizable Mechatronic System Design).</p>
 <p>機械元件建模工具:</p>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">Solvespace</a> (開源)、<a href="https://mde.tw/cad2021_hw/content/NX1980.html">NX1980</a> (高端)、<a href="https://www.onshape.com/en/">Onshape</a> (全雲端)</p>
 <p>電子電機控制與感測模擬工具:</p>
@@ -162,8 +162,7 @@ img.add_border {
 <p style="padding-left: 30px;">3D Printer based 列印模擬:</p>
 <p style="padding-left: 60px;"><a href="https://all3dp.com/2/gcode-viewer-3d-printer-simulator-best-tools/">https://all3dp.com/2/gcode-viewer-3d-printer-simulator-best-tools/</a></p>
 <p>雷射切割模擬工具:</p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/papercraft">https://github.com/mdecourse/papercraft</a>  (Unfold STL for laser cutting)</p>
-<br />About << <a href='About.html'>Previous</a> <a href='Website.html'>Next</a> >> Website</div>
+<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/papercraft">https://github.com/mdecourse/papercraft</a>  (Unfold STL for laser cutting)</p><br />About << <a href='About.html'>Previous</a> <a href='Website.html'>Next</a> >> Website</div>
         
     <!-- footer -->
       <div class="container">
